--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,6 +10,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - run: make deps
+
       - name: Check scripts
         run: make shellcheck
 
